126话翻译； 重新打包epub

--- a/OEBPS/Text/c126.xhtml
+++ b/OEBPS/Text/c126.xhtml
@@ -13,172 +13,172 @@
 <body>
     <h1>126 感謝</h1>
 
-    <p>　――いつからだろう。</p>
-    <p>　人生という物語から目的がなくなったのは。</p>
-    <p>　メルセデスは自らの前世だった誰かの過去を思い出しながら、考えていた。</p>
+    <p>——不知道什么时候开始的。</p>
+    <p>从人生的故事中失去了目的。</p>
+    <p>梅赛德斯一边回忆着自己前世某人的过去，一边思考着。</p>
     <p></p>
     <p></p>
-    <p>　前世だった誰かは、最初から空っぽな人間だったわけではなかった。</p>
-    <p>　それなりに楽しむ心を持っていて、それなりによく笑ってよく怒る、どこにでもいるただの子供だった。</p>
-    <p>　中学生の時には友人に誘われてテニスを始め、最初は興味のなかったそれに気付けば夢中になっているくらいには、どこにでもいて色々なものを楽しめる子供だったのだ。</p>
-    <p>　熱中して集中して、毎日練習して……そして全国大会に出て、決勝戦でその友人とぶつかり、勝利した。</p>
-    <p>　友人は全国大会で優勝したいという夢をよく聞かせてくれたが、加減はしなかった。それは失礼に当たると思ったからだ。</p>
-    <p>　自分が勝利してもきっと祝福してくれるだろうと思っていたし、悔しがりながらも認めてくれるだろうと思っていた。</p>
-    <p>　だが友人はその日を境にテニスをやめ、そして友人は友人ではなくなった。ただの会話を交わさない知り合いとなり、中学を卒業した後の事はよく分からない。</p>
+    <p>前世的某个人，并不是一开始就空荡荡的。</p>
+    <p>她拥有一颗享受的心，总是笑着发脾气，是随处可见的普通孩子。</p>
+    <p>初中的时候被朋友邀请开始打网球，一开始没兴趣，一注意到就着迷了，是个无论在哪里都能享受各种各样东西的孩子。</p>
+    <p>热衷于集中精神，每天练习……然后参加全国大赛，在决赛中和那个朋友相撞，取得了胜利。</p>
+    <p>朋友经常给我听我说想在全国大赛中获胜的梦想，但我没有把握。因为我觉得那个很失礼。</p>
+    <p>我想即使自己胜利了也一定会得到祝福，即使后悔也会得到认可。</p>
+    <p>但是朋友从那天开始就放弃了打网球，朋友也不再是朋友了。成为了不怎么交流的朋友，不太清楚中学毕业后的事情。</p>
     <p></p>
     <p></p>
-    <p>　人は現実を知り、才能を知り、挫折を知り。そして夢を追わなくなって目的のない物語が出来上がる。</p>
-    <p>　一つの物語が挫折によって終了し、テニスで全国大会優勝を目指していた主人公は、何の目的もない物語の主人公となった。</p>
-    <p>　どうして負けてやらなかったんだ。あいつの夢を知っていたはずなのに。それでも友達か。お前は酷い奴だ。そんなふうに誰かに言われたのを覚えている。</p>
-    <p>　言ったのは誰だったか……クラスメイトの誰かだったとは思うが、顔も名前も覚えていない。</p>
+    <p>人知道现实，知道才能，知道挫折。然后，不再追逐梦想，创作出没有目的的故事。</p>
+    <p>一个故事因挫折而结束，以网球全国大赛优胜为目标的主人公，成为了毫无目的的故事主人公。</p>
+    <p>为什么没有输给她呢。明明知道那家伙的梦想。还是朋友吗。你是个残酷的家伙。我记得是那样被谁说的。</p>
+    <p>说的是谁……我想是同班同学中的谁，但是长相和名字都不记得了。</p>
     <p></p>
     <p></p>
-    <p>　思えば大人になってから、何かに挑むという事をした記憶がない。</p>
-    <p>　無難な道、無難な選択、無難な人生……効率よく、敵を作らず、恨まれず、されど目的もなく。</p>
-    <p>　挑む事をやめた人生には挫折もない。壁を乗り越える感動もない。</p>
-    <p>　辿り着く場所も、そこに至る道もない。</p>
-    <p>　ただ無感動に歩き続けるだけで……そしてある日、足を転ばせて死んだ。</p>
-    <p>　それがメルセデスの前世だった誰かの、つまらない物語だ。</p>
-    <p>　全力で生きる事を放棄した誰かのつまらない人生だった。</p>
+    <p>回想起来，长大后，我没有挑战过什么的记忆。</p>
+    <p>无灾无难的道路、无灾的选择、无灾的人生……效率高、不树敌、不被恨、却没有目的。</p>
+    <p>放弃挑战的人生没有挫折。没有跨越墙壁的感动。</p>
+    <p>没有想要到达的地方，也没有到达那里的路。</p>
+    <p>只是无感动地继续走着……然后有一天，她摔死了。</p>
+    <p>这就是梅赛德斯前世某人的无聊故事。</p>
+    <p>放弃了全力活下去的无聊的某个人的人生。</p>
     <p></p>
     <p></p>
     <p></p>
-    <p>　だからこそ、この苦境に心が揺さぶられているのだろうか。</p>
-    <p>　ああ、そうだ。ようやく少し分かってきた。</p>
-    <p>　メルセデスの顔が好戦的に歪み、魔力の急激な放出によって身体に負荷がかかる。痛みが走る。</p>
-    <p>　だが今は、その痛みすら心地いい。</p>
-    <p>　全力で生きるという事。それは即ち、全力を出して挑んでも尚容易ではない壁にぶつかるという事。</p>
-    <p>　父の手の中から未だに出る事が出来ないという屈辱、その予想を上回る困難さが何故か楽しい。</p>
-    <p>　今までは朧気で霞のように掴めなかった生きている実感が、確かな形をもって手の中にあるように感じられる。</p>
-    <p>　故に、メルセデスは今ここにいないベルンハルトに感謝した。</p>
-    <p>　決して善人ではない。むしろ外道畜生の類で、自由を掴む為にいつか倒すべき敵で、その評価は決して変わらない。</p>
-    <p>　だがそれでも、あんな歪んだ父だからこそ歪んだこの娘には有難い。</p>
+    <p>正因为如此，我的心才被这样的困境所动摇吧。</p>
+    <p>啊，对了。我终于有点明白了。</p>
+    <p>梅赛德斯的脸好战地变形，根据魔力的急剧放出对身体施加负荷。疼痛在身上奔走。</p>
+    <p>但是现在，那种疼痛也很舒服。</p>
+    <p>全力以赴地生活。也就是说，即使你尽力而为，它也不容易碰壁。</p>
+    <p>至今还无法从父亲手中脱颖而出的屈辱，不知为何比预想的困难还要快乐。</p>
+    <p>至今为止模模糊糊，像霞一样无法抓住的活着的实感，以确实的形态存在于手中。</p>
+    <p>因此，梅赛德斯感谢了现在不在这里的伯恩哈特。</p>
+    <p>决不是好人。倒不如说是外道畜生之类的，为了抓住自由总有一天会打倒的敌人，这种评价绝对不会改变。</p>
+    <p>但是即便如此，正因为是那样歪斜的父亲，这个扭曲的女儿还是很感谢的。</p>
     <p></p>
     <p></p>
-    <p>　――ありがとう、ベルンハルト。巨大な壁あなたが私の父でよかった……。</p>
+    <p>——谢谢，伯恩哈特。巨大的墙壁你能成为我的父亲真是太好了……。</p>
     <p></p>
     <p></p>
-    <p>　かつてない程の出力で発動された魔法がフィールドを駆け巡り、ほんの数十秒で先程まで一面の大空だったはずのフィールドが砂丘へと変化していた。</p>
-    <p>　最早飛ぶ必要もない程に積もり積もった砂は、まるで自らの意志を持つかのように一か所に集中していく。</p>
-    <p>　その中から時折炎の翼が弱弱しく出ては脱出しようともがくが、すぐに新たな砂が追加されて閉じ込められてしまった。</p>
-    <p>　魔法で生み出した砂でフェーニクスを閉じ込め、それを重力で固めて固めて、圧縮していく。</p>
+    <p>以前所未有的输出发动的魔法在场上奔跑，短短几十秒的时间，本应是天空的场都变成了沙丘。</p>
+    <p>堆积得几乎不需要飞行的沙子，就好像有自己的意志一样集中在一个地方。</p>
+    <p>偶尔，火焰的羽翼微弱地伸出来，挣扎着想要逃走，但很快又加入了新的沙子，将它困住了。</p>
+    <p>用魔法产生的沙子将相位关在一起，用重力将其固定并压缩。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">ユリア。水の魔法でアレを濡らせるか？</span>”</p>
-    <p>“<span class="character">お安い御用</span>”</p>
+    <p>“<span class="character">尤里亚。能用水的魔法把那个弄湿吗？</span>”</p>
+    <p>“<span class="character">简单的任务</span>”</p>
     <p></p>
     <p></p>
-    <p>　圧縮した砂にユリアが水を与える事で巨大な泥団子と化した。</p>
-    <p>　厳密に言えば泥とは砂よりも細かい粒の事であって、濡らした砂の事ではないのだが、そこはまあいいだろう。</p>
-    <p>　要は砂場で遊ぶ子供の泥遊びと同レベルの事でしかない。</p>
-    <p>　ただし、その規模は遊びとは到底呼べないものだ。</p>
-    <p>　メルセデスが両手をゆっくりと近付け、何かを握るように組み合わせる。</p>
-    <p>　するとフェーニクスを閉じ込める泥がますます圧縮され、中から感じられる抵抗が弱まった。</p>
-    <p>　メルセデスは笑みを保ったまま更に力を籠め、腕と額に血管が浮き上がる。</p>
-    <p>　その動きに呼応するように固められた泥は小さくなっていき、やがてガチガチに固まった煉瓦となって地面を転がった。</p>
-    <p>　もうフェーニクスの気配は感じられない。</p>
-    <p>　炎の化身は完全に閉じ込められ……いや、握り潰され、その存在を抹消されていた。</p>
+    <p>尤里亚给压缩后的沙子浇水后变成了巨大的泥团子。</p>
+    <p>严格说来，泥是指比沙子还要细的颗粒，并不是指湿了的沙子，但也可以吧。</p>
+    <p>简而言之，就是和在沙地玩耍的孩子玩泥土是同一级别的事情。。</p>
+    <p>但是，那个规模无论如何也不能称之为游戏。</p>
+    <p>梅赛德斯两手慢慢靠近，像握着什么东西一样组合在一起。</p>
+    <p>于是，关在一起的泥土越来越压缩，从里面感受到的阻力变弱了。</p>
+    <p>梅赛德斯保持笑容，继续用力，手腕和额头上的血管浮起。</p>
+    <p>与此动作相呼应，凝固的泥变小了，不久就变成了坚固的砖在地面上滚动。</p>
+    <p>已经感觉不到芬尼克斯的迹象了。</p>
+    <p>火焰的化身被完全封闭……不，被握碎，那个存在被抹消了。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">あれだけ手強かった敵も、一度攻略法が分かってしまえば呆気ないものだな……</span>”</p>
+    <p>“<span class="character">即使是那么强大的敌人，一旦知道攻略方法，也不会感到惊讶吧……</span>”</p>
     <p></p>
     <p></p>
-    <p>　余りにも簡単に終わってしまった事に、思わず失望したような声が漏れた。</p>
-    <p>　苦戦していた時は無敵にすら思えたのに、倒し方さえ分かってしまえば何と簡単な事だろう。</p>
-    <p>　我ながら面倒くさい奴だ、と思う。</p>
-    <p>　敵を倒して目標に向かって歩もうとしているのに、それが簡単に行くと不満を覚えるなどと。</p>
-    <p>　だがおかげで、ようやく自分で自分というものを少し理解出来てきた。</p>
-    <p>　どうも、自分で思っていたよりも遥かに幼稚で、そして歪んだ性根をしていたらしい。</p>
-    <p>　欲しい宝石があるから必死に働いて金を溜め、そしていざ必要金額が溜まればその瞬間に途端に宝石への興味を無くす。</p>
-    <p>　メルセデス・グリューネヴァルトとはそういう心底面倒な女だったようだ。</p>
+    <p>因为结束得太简单了，不由得发出失望的声音。</p>
+    <p>在苦战的时候甚至觉得是无敌的，但是只要知道怎么打的话就很简单了。</p>
+    <p>我自己都觉得是很麻烦的家伙。</p>
+    <p>明明想打倒敌人朝着目标前进，但是简单的进行的话会感到不满。</p>
+    <p>但是多亏了这个，我终于能够稍微理解自己了。</p>
+    <p>总觉得比自己想象的要幼稚得多，而且好像有扭曲的本性。</p>
+    <p>因为有想要的宝石，所以拼命工作攒钱，然后一旦积攒了必要的金额，那一瞬间就会对宝石失去兴趣。</p>
+    <p>梅赛德斯·格鲁内瓦特就是那种从心底觉得麻烦的女人。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">殿？</span>”</p>
-    <p>“<span class="character">何でもない。先へ進むぞ</span>”</p>
+    <p>“<span class="character">老爷？</span>”</p>
+    <p>“<span class="character">没有。让我们继续前进</span>”</p>
     <p></p>
     <p></p>
-    <p>　もうフェーニクスへの関心はどこにもなかった。</p>
-    <p>　ユリアに素っ気なく返し、そして試練の間を抜ける。</p>
-    <p>　その先にあったのは、ダンジョンの最深部である魔物の複製部屋だ。</p>
-    <p>　立ち並ぶ木々の中央には丸い水槽がはめ込まれ、その中では魔物が眠っている。</p>
-    <p>　初めて見るだろうその光景にユリアとドミニオンは驚いたように辺りを見渡しているが、もうメルセデスは慣れたものだ。</p>
-    <p>　少し待つと、メルセデス達の前に人間の姿が映し出され、ユリアとドミニオンは咄嗟に警戒態勢を取った。</p>
+    <p>对芬尼克斯没有兴趣了。</p>
+    <p>他漫不经心地回到尤利亚身边，穿过了试炼之间。</p>
+    <p>再往前就是位于迷宫最深处的怪物复制室。</p>
+    <p>树木中央镶嵌着圆形水槽，里面沉睡着魔物。</p>
+    <p>第一次看到这样的景象，尤里亚和多米尼安惊讶地环视四周，但梅赛德斯已经习惯了。</p>
+    <p>稍等片刻，梅赛德斯等人的面前出现了人类的身影，尤里亚和多米尼翁立刻采取了警戒态势。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">武器を下げろ、こいつは敵ではない。このダンジョンの管理者だ</span>”</p>
+    <p>“<span class="character">“放下武器，这家伙不是敌人。是这个迷宫的管理者。</span>”</p>
     <p></p>
     <p></p>
-    <p>　放っておくと攻撃に移りそうな二人を宥め、それから目の前の人間……いや、人間の姿を模した管理者の立体映像を見る。</p>
-    <p>　白衣はツヴェルフや、帝国ダンジョンの管理者であったズィーベンと同様。外見は若い男のもので、顔立ちは中々整っている。</p>
-    <p>　まあ、メルセデスは基本的には最初に入手したダンジョンの管理者であるツヴェルフにばかり質問するので、彼もどうせ空気になるだろう。</p>
+    <p>让放着不管就会转移到攻击中的两个人，然后是眼前的人……不，是模仿人类姿态的管理者的立体影像。</p>
+    <p>白衣和茨瓦尔夫、帝国地牢的管理者苏菲本一样。外表是年轻男人的东西，容貌中等端正。</p>
+    <p><span class="comment translator">ツヴェルフ 德语 zwölf, 12</span></p>
+    <p><span class="comment translator">ズィーベン 德语 sieben [`zi:bn], 7</span></p>
+    <p>嘛，梅赛德斯基本上只会问最初入手的迷宫的管理者茨瓦尔夫，所以他也会变成空气吧。</p>
     <p></p>
     <p></p>
-    <p>《<span class="character">ようこそ、ダンジョンマスター・メルセデス様。私はツェーン。このダンジョンの管理者を務めております</span>》</p>
-    <p>“<span class="character">ああ。早速で悪いが、このダンジョンは私の所持しているシュタルクダンジョン……このハルバードと統合する。出来るか？</span>”</p>
-    <p>《<span class="character">お任せを</span>》</p>
+    <p>《<span class="character">欢迎光临，迷宫主人梅赛德斯大人。我是谢恩。我是这个迷宫的管理者。</span>》</p>
+    <p><span class="comment translator">ツェーン 德语zehn [tse:n], 10</span></p>
+    <p>“<span class="character">哦，比较急所以抱歉了，这个地牢和我的史塔克地牢……有没有可能和这柄斧枪融合？</span>”</p>
+    <p>《<span class="character">交给我吧</span>》</p>
     <p></p>
     <p></p>
-    <p>　前回帝国ダンジョンを入手した際には、『壊れない金属』で出来た防具を増やす事を優先して腕輪にしたが、今回はハルバードと統合する事を選んだ。</p>
-    <p>　こうする事でダンジョンの拡張に繋がるし、このグレンツェダンジョンの持つポイントと魔物がそっくりそのままシュタルクダンジョンに統合されるので出来る事も多くなるはずだ。</p>
+    <p>上次拿到帝国地牢的时候，优先增加用“不坏的金属”做成的防具，这次选择了和斧枪合并。</p>
+    <p>这样一来，不仅可以扩展地牢，而且可以将格伦谢地牢所持有的重点和魔物完全融合到史塔克地牢中，所以应该能做的事情也会变多。</p>
     <p></p>
     <p></p>
-    <p>《<span class="character">あの……随分あっさりされていますね……もっとこう、私に質問とか……</span>》</p>
-    <p>“<span class="character">質問ならばこの後ツヴェルフにするから問題ない。早くやってくれ</span>”</p>
-    <p>《<span class="character">……はいぃ……</span>》</p>
+    <p>《<span class="character">那个……很淡泊呢……再这样问我一个问题……</span>》</p>
+    <p>“<span class="character">如果有问题的话，之后我会选择茨瓦尔夫的，没问题。快点做吧。</span>”</p>
+    <p>《<span class="character">……好的……</span>》</p>
     <p></p>
     <p></p>
     <p>　ツェーンと名乗った優男は登場早々メルセデスの塩対応の洗礼を浴び、落ち込んでしまった。</p>
-    <p>　しかし彼には悪いが、質問をぶつける管理者は正直ツヴェルフ一人でいい。</p>
-    <p>　誰に話してもどうせ内容は変わらないだろうし、それならば気心の知れたツヴェルフに聞くのが一番楽だ。</p>
-    <p>　攻略されたダンジョンはまるでモデリング最中の３Ｄ映像のようになり、メルセデスの持つハルバードへと吸い込まれていく。</p>
-    <p>　やがて完全にダンジョンが消えてなくなり、後にはメルセデス達と……恐らくはダンジョン攻略の真っ最中だったのだろう多くのシーカー達だけが残されてしまった。</p>
-    <p>　最初は何が起こったのか分からず茫然としていたシーカー達も、やがて誰かがダンジョンを攻略してしまったのだと気付き、騒ぎ始める。</p>
-    <p>　とはいえ、メルセデスが攻略者だと気付く者はいない。</p>
-    <p>　木を隠すなら森の中……この場に立っているのがメルセデス一人だけならばメルセデスが攻略したと誰でも分かるが、これだけシーカーが大勢いては誰が攻略したのかなど分かるはずがない。</p>
-    <p>　探索中だった大勢のシーカーのうちの一人としか見られないだろう。</p>
-    <p>　混乱するシーカー達を放置してメルセデスはそっとその場を抜け出し、宿へと戻った。</p>
+    <p>但是，虽然对他不好，但是要提出问题的管理者说实话只要一个人就可以了。</p>
+    <p>不管跟谁说，反正内容是不会变的，那样的话问一下知心的茨瓦尔夫是最轻松的。</p>
+    <p>被攻占的地牢就像正在建模的3D影像一样，被吸入梅赛德斯所拥有的哈尔巴德。</p>
+    <p>不久地牢就完全消失了，之后和梅赛德斯他们……恐怕只有在攻占地牢的时候吧，很多被访者被留下了。</p>
+    <p>一开始还不知道发生了什么，茫然的seeker们也察觉到有人攻下了迷宫，开始骚动。</p>
+    <p>话虽如此，却没有人注意到梅赛德斯是攻略者。</p>
+    <p>如果要隐藏树木的话，就在森林里……站在这里的只有梅赛德斯一个人的话，谁都知道梅赛德斯攻略了，但是如果有这么多的seeker的话，谁也不可能知道是谁攻占的。</p>
+    <p>只能看到是正在探索中的众多的巡逻车中的一个人吧。</p>
+    <p>梅赛德斯把混乱的seeker们放在一边，悄悄地溜出了那个地方，回到了旅馆。</p>
     <p></p>
     <p></p>
     <p></p>
     <p></p>
-    <p>　宿に戻ったメルセデスはベッドに腰をかけ、荷物を降ろす。</p>
-    <p>　それから早速、ダンジョンキーに意識を集中させてツヴェルフへと呼びかけた。</p>
-    <p>　ツェーン？　誰だっけ、それ。</p>
+    <p>回到旅馆的梅赛德斯坐在床上，放下行李。</p>
+    <p>然后很快，他把注意力集中在了迷宫钥匙上，呼叫了茨瓦尔夫。</p>
+    <p>谢恩？那是谁来着。</p>
     <p></p>
     <p></p>
-    <p>《<span class="character">お呼びですか、マスター</span>》</p>
-    <p>“ああ。新たにダンジョンを攻略し、これで私は三つのダンジョンのマスターとなった。</p>
-    <p>話せる事も前回より増えているはずだと思ってな……。</p>
-    <p>聞かせてくれるか？　この世界の神……人間が、何故この世界と私達を創ったのかを”</p>
+    <p>《<span class="character">您叫我吗，主人</span>》</p>
+    <p>“<span class="character">啊，我重新攻占了地牢，于是我成了三个地牢的主人。我觉得能说的话应该比上次增加了……能告诉我吗？这个世界的神……人类为什么要创造这个世界和我们？</span>”</p>
     <p></p>
     <p></p>
-    <p>　ダンジョンには世界の真理と過去が隠されている。</p>
-    <p>　メルセデスは過去二度のダンジョン攻略を経て、ツヴェルフの口からその一端を聞き出していた。</p>
-    <p>　この世界で神と呼ばれている者の正体は、前世でかつて自分もそうであった生物……学名『ホモ・サピエンス』である事。</p>
-    <p>　人間は高度に進み過ぎた科学と遺伝子工学に頼りすぎたせいで歪な進化……いや、退化をしてしまい、頭部だけが異常に巨大化した肉塊となってしまった事。</p>
-    <p>　やがて栄華のピークに達した時、彼等は懐古主義に取りつかれ、在りし日の最もバランスが取れていた時代の姿に戻ろうと考え始めた事。</p>
-    <p>　そして、人類の後継者……子孫として造り出された者達こそが、このレッド・プラネットに生きる人々である事……。</p>
-    <p>　しかしこれでは後継者として機能していない。</p>
-    <p>　ただ、人間と似ているだけの別の生物を創っただけだ。</p>
-    <p>　そして、その理由はまだ分からない。ダンジョン二つを攻略した程度で得られる権限では聞き出せない情報だったからだ。</p>
-    <p>　また、メルセデスは前世の記憶を持っているが、これは決して偶然やバグではなく創造主が意図した上で、こうした記憶持ちは生まれているのだという。</p>
-    <p>　とはいえ、ツヴェルフが言うにはメルセデスは別に人間に操られている人形や、実は人間の脳を移植された存在……などという事はないらしい。</p>
-    <p>　前回はここまで聞く事が出来た。そして今、その続きを聞く事が出来る。</p>
+    <p>地牢里隐藏着世界的真理和过去。</p>
+    <p>梅赛德斯过去曾两次攻占地下城，从茨瓦尔夫的口中探出其中的一部分。</p>
+    <p>在这个世界上被称为神的人，其真面目是前世自己也曾是这样的生物……学名“人类”。</p>
+    <p>人类由于过度依赖高度发达的科学和基因工程而进化成畸形……不，退化了，只有头部变成了异常巨大的肉块。</p>
+    <p>不久，当荣华达到顶峰的时候，他们开始考虑回到怀古主义缠身、保持着昔日最平衡的时代。</p>
+    <p>然后，人类的继承者……作为子孙被创造出来的人才是生活在这个红星球上的人们……。</p>
+    <p>但是，这样的话就不能作为后继者发挥作用了。</p>
+    <p>只是创造了和人类相似的其他生物而已。</p>
+    <p>而且，我还不知道理由。因为这是只有攻占两个地牢才能获得的权限是听不到的信息。</p>
+    <p>另外，虽然梅赛德斯有前世的记忆，但这绝不是偶然或错误，而是在创造者的意图下，产生了这样的记忆。</p>
+    <p>话虽如此，茨瓦夫说，梅赛德斯并没有被人类操纵的人偶，实际上是移植了人类大脑的存在……之类的事情。</p>
+    <p>上次听到这里了。然后现在可以听到那个的后续。</p>
     <p></p>
     <p></p>
-    <p>《<span class="character">イエス、マスター。ではまず、この世界の成り立ちから語りましょう</span>》</p>
+    <p>《<span class="character">Yes，主人。那么先从这个世界的构成说起吧</span>》</p>
     <p></p>
     <p></p>
-    <p>　そしてツヴェルフは、話せる日を待ち望んでいたように口を開いた。</p>
-    <p>Ｑ、割と娘に好かれてたようですが、今どんな気持ちですか？</p>
-    <p>ベルンハルト“下らん”</p>
+    <p>然后，他像是在盼望能说话的那一天一样开口了。</p>
+    <p>Ｑ、好像比较受女儿欢迎，现在是什么心情呢？</p>
+    <p>ベルンハルト“<span class="character">下らん</span>”</p>
     <p></p>
     <p></p>
-    <p>ベルンハルト“………………”ニヤニヤ</p>
+    <p>ベルンハルト“<span class="character">………………</span>”ニヤニヤ</p>
     <p></p>
     <p></p>
-    <p>ハンナ“……………………。</p>
-    <p>メルちゃんとベルンハルト、実はお互いの事大好きじゃん……”</p>
+    <p>ハンナ“<span class="character">……………………。メ小梅尔和伯恩哈特，其实不是很喜欢彼此吗……</span>”</p>
 </body>
 
 </html>
