添加一个分隔线

--- a/OEBPS/Text/c126.xhtml
+++ b/OEBPS/Text/c126.xhtml
@@ -171,6 +171,7 @@
     <p></p>
     <p></p>
     <p>然后，他像是在盼望能说话的那一天一样开口了。</p>
+    <p class="divline"></p>
     <p>Ｑ、好像比较受女儿欢迎，现在是什么心情呢？</p>
     <p>ベルンハルト“<span class="character">下らん</span>”</p>
     <p></p>
