--- a/OEBPS/Text/c126.xhtml
+++ b/OEBPS/Text/c126.xhtml
@@ -163,7 +163,7 @@
     <p>只是创造了和人类相似的其他生物而已。</p>
     <p>而且，我还不知道理由。因为这是只有攻占两个地牢才能获得的权限是听不到的信息。</p>
     <p>另外，虽然梅赛德斯有前世的记忆，但这绝不是偶然或错误，而是在创造者的意图下，产生了这样的记忆。</p>
-    <p>话虽如此，茨瓦夫说，梅赛德斯并没有被人类操纵的人偶，实际上是移植了人类大脑的存在……之类的事情。</p>
+    <p>话虽如此，茨瓦尔夫说，梅赛德斯并非被人类操纵的人偶，实际上是移植了人类大脑的存在……之类的事情。</p>
     <p>上次听到这里了。然后现在可以听到那个的后续。</p>
     <p></p>
     <p></p>
