--- a/OEBPS/Text/c127.xhtml
+++ b/OEBPS/Text/c127.xhtml
@@ -12,160 +12,166 @@
 
 <body>
     <h1>127　コンペティション</h1>
-    <p>《<span class="character">この世界の始まりは西暦……当時は既に西暦という言葉自体が忘れ去られていましたが、マスターの分かりやすいようにあえて西暦で語るならば一万五千と二百三十三年。突如として火星がそれまでの軌道から逸れ、少しだけ太陽に近づいた事に端を発します</span>》</p>
+    <p>《<span class="character">这个世界开始于公元……当时西历这个词本身就已经被遗忘了，为了让猪人更容易理解，如果硬要用西历来说明的话。那就是公元15023年。火星突然偏离了原来的轨道，稍微靠近了点太阳。</span>》</p>
     <p></p>
     <p></p>
-    <p>　ツヴェルフの説明にメルセデスはふむ、と相槌を打つ。</p>
-    <p>　西暦でないならば当時は何と呼んでいたのか少し気になったが、別にそれは知らなければならない情報というわけではない。</p>
-    <p>　それより今は、とにかく続きを聞く事が優先だ。</p>
-    <p>　さして重要でもない質問で話の腰を折る気はない。</p>
+    <p>梅赛德斯对茨瓦尔夫的说明表示附和。</p>
+    <p>有点在意当时不是西历的话又叫什么，但并不是必须知道的信息。</p>
+    <p>比起这个，现在不管怎样先听下去是最优先的。</p>
+    <p>不想因为无关紧要的问题打断话头。</p>
     <p></p>
     <p></p>
-    <p>『原因は今でも分かっておりません。突発的な重力波によるものとする説もありますし、遠くで起こった超新星爆発の影響ともいわれています。</p>
-    <p>宇宙人の悪戯とする荒唐無稽な説もあります。</p>
-    <p>しかし全ては推測の域を出ません。真実は永遠に宇宙の闇の中……ただ、事実として火星は太陽に近づき、これまでの環境から一変しました』</p>
+    <p>《<span class="character">现在还不知道原因。有说法认为是由突然的重力波引起的，也有说法认为是受远处发生的超新星爆炸的影响。</span></p>
+    <p><span class="character">也有作为宇宙人的恶作剧的荒唐无稽的见解</span></p>
+    <p><span class="character">但是全部都不超出推测范围。真相永远在宇宙的黑暗中……但是，作为事实，火星接近太阳，从以前的环境中完全改变了</span>》</p>
     <p></p>
     <p></p>
-    <p>　火星は――あくまでこれは一つの説に過ぎないが、四十億年以上昔は地球と同じような環境だったという。</p>
-    <p>　火星の表面には川のようなものがあった跡や火山の痕跡があり、かつての火星には広大な海もあったと言われている。</p>
-    <p>　しかし火星は地球の半分程度の半径しかない為に重力が弱く、大気が宇宙空間へ逃げていった結果、メルセデスの知る火星となった……という話を何かの本で読んだ記憶があった。</p>
-    <p>　勿論実際どうだったのかなど、メルセデスには知る由もない。</p>
-    <p>　四十億年以上も昔の火星の姿など誰も見ていないのだから、どれだけ正しく聞こえる学説や論文でも推察の域を出る事は出来ないのだ。</p>
+    <p>火星——说到底这只是有这样一种说法：据说在四十亿年以前，它是和地球一样的环境。</p>
+    <p>据说火星的表面有河一样的东西的痕迹和火山的痕迹，以前的火星也有广大的海。</p>
+    <p>但是因为火星只有地球的一半半径，所以重力很弱，大气逃到了宇宙空间，结果变成了梅赛德斯所知道的火星……只记得在某本书中读到过这样的故事。</p>
+    <p>当然，实际上是怎样的，梅赛德斯是无法知道的。</p>
+    <p>谁都没有见过四十亿多年前的火星的身影，所以无论是听起来多么正确的学说或论文都无法超出推测的范围。</p>
     <p></p>
     <p></p>
-    <p>『太陽との距離が縮んだ事で火星には様々な変化が生まれました。</p>
-    <p>結論だけ先に述べると、自転の速度や温かさ、重力……そうしたものが変化していき、それから二百年後には地球に限りなく近い条件の惑星となったのです。</p>
-    <p>……そこに至るまでの経緯や、何故そうなったかの当時の科学者の推察もお聞きしますか？』</p>
-    <p>“<span class="character">いや、いい。長くなりそうだし、多分聞いても分からん。先に進めてくれ</span>”</p>
+    <p>《<span class="character">由于与太阳的距离缩短，火星产生了各种各样的变化。</span></p>
+    <p><span class="character">如果只先说结论的话，自转的速度、温暖、重力……这些东西就会发生变化，然后二百年后就变成了与地球无限接近的条件的行星。</span></p>
+    <p><span class="character">……到那里为止的经过，为什么会变成这样，您也要听听当时科学家的推测吗？</span>》</p>
+    <p>“<span class="character">不，没关系。好像会变长，大概听了也不知道。先继续讲吧。</span>”</p>
     <p></p>
     <p></p>
-    <p>　疑問がないわけではない。</p>
-    <p>　突っ込み所はいくらでもある。</p>
-    <p>　だがそんなものは当時の学者があれこれ語り尽しただろうし、その上でツヴェルフ曰く『推察』なのだから、結局答えは出なかったという事だ。</p>
-    <p>　結局の所、いかに科学を極めて神を気取ろうと人の頭脳で宇宙や星の不可思議を全て解き明かすなど出来ないという事か。</p>
+    <p>并不是没有疑问。</p>
+    <p>吐槽的地方有的是。</p>
+    <p>但是那样的东西当时的学者说尽了各种各样的话，而且因为是茨瓦尔夫曰的『推测』，结果没有得出答案。</p>
+    <p>归根结底，无论如何将科学做到极致，都无法用人类的头脑去解开宇宙和星星的不可思议之处。</p>
     <p></p>
     <p></p>
-    <p>『人類は、この火星に目を付けました。</p>
-    <p>これまで幾度となく語られながらもＳＦの中の出来事でしかなかった火星のテラフォーミング……それが現実味を帯びたのです。</p>
-    <p>そして人類は、この火星を新たな舞台としてもう一度歴史をやり直す事を決めました。</p>
-    <p>流石に、自分達の姿が歪で、そしてこのままでは未来がない事は自覚していたようです。</p>
-    <p>それこそが今、マスターが立っているこの惑星……かつて火星と呼ばれていた星です』</p>
-    <p>“<span class="character">この地が火星で、あの青い月は地球……か。まあ随分前に予想出来ていた事だ</span>”</p>
+    <p>《<span class="character">人类已经注意到了这个火星。</span></p>
+    <p><span class="character">火星的地球化，已经被谈论过很多次，但只是科幻小说中的一个事件……它成为了现实。</span></p>
+    <p><span class="character">而人类决定以这个火星为新的舞台，重新开始历史。</span></p>
+    <p><span class="character">正如所料，他们似乎意识到自己的容貌被扭曲了，没有未来。</span></p>
+    <p><span class="character">这就是现在主人所站立的行星……曾经被称为火星的星球</span>》</p>
+    <p>“<span class="character">这个地方是火星，那个蓝色的月亮是地球……吗？这是很早之前就预料到的事。</span>”</p>
     <p></p>
     <p></p>
-    <p>　ここが火星で、あの月は地球……それ自体は数年前から確信に近いレベルで予想出来ていた事だ。</p>
-    <p>　だからそれはもういい。答え合わせをして、正解だった事が分かったに過ぎない。</p>
+    <p>这里是火星，那个月亮是地球……这本身是几年前就可以预测到的接近确信的水平。</p>
+    <p>所以这很好。我刚刚匹配了答案，发现这是正确的答案。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">そしてテラフォーミングは成功した。そうだな？</span>”</p>
-    <p>『はい。人類は持てる全ての英知を結集し、四百年の時を費やして火星を移住可能な惑星へと作り変えました。その時に開発され、テラフォーミングの中核を担ったのが人工の原子……ナノマシンです。</p>
-    <p>人類はナノマシンを使い、自分達の後継者となる新たな人型の生物の創造に着手しました。</p>
-    <p>その理由は前回も述べた通り、人類そのものを再現しては同じ道を辿るだけだと分かっていたからです』</p>
+    <p>“<span class="character">并且地球化是成功的。是这样吗？</span>”</p>
+    <p><span class="comment translator">テラフォーミング terraforming 地球化改造</span></p>
+    <p>《<span class="character">是的。人类集结了所有的智慧，花了四百年的时间将火星改造成了可以移居的行星。那时开发的，担任改造核心的是人工原子……纳米机器。</span></p>
+    <p><span class="character">人类使用纳米机器，开始了成为自己继承人的新的人型生物的创造。</span></p>
+    <p><span class="character">理由正如上次所述，因为已经知道了再现人类本身只是会走向同一条路</span>》</p>
     <p></p>
     <p></p>
-    <p>　ツヴェルフの説明にメルセデスは頷く。</p>
-    <p>　これは前回聞いた事だ。人類は発達した科学で遺伝子に手を加え、寿命を延ばし、不治の病も克服した。</p>
-    <p>　だが便利になり過ぎた科学は人類から生物としての強さを奪い、逆に退化を促した。</p>
-    <p>　その果てに最終的に人類は機械の力がなければ生きていく事すら出来ない肉塊となり、その過ちを繰り返さぬように最初から強く優れた生命体を創り出したのだと。</p>
-    <p>　だがこれでは人類と異なる生物を創ったに過ぎず、人類の後継者として機能していない。</p>
+    <p>梅赛德斯同意了茨瓦尔夫的说明。</p>
+    <p>这是上次听说的事。人类在发达的科学中对基因进行了加工，延长了寿命，克服了不治之症。</p>
+    <p>然而，过于便利的科学却剥夺了人类作为生物的强大，反而促使了人类退化。</p>
+    <p>最终人类变成了没有机械的力量就无法生存的肉块，为了不重蹈覆辙，从一开始就创造出了强大而优秀的生命体。</p>
+    <p>但是，这只不过是创造了与人类不同的生物，并没有作为人类的后继者发挥作用。</p>
     <p></p>
     <p></p>
-    <p>『人類はいくつもの人型の生物を生み出し、この惑星に送り込んでテストを繰り返しました。</p>
-    <p>時に英知を授け、時に争わせ……そして失敗を糧にまた改良を重ねた人型の生物を作り、実験を続けました。</p>
-    <p>送り込んだ生物がどれだけ早く文化を築くか。戦争をして、どの生物が勝るか。それを幾度も試し、</p>
-    <p>最初は数百種もいた新生物も、競合の果てに絶滅していき、やがて実験は最終段階へと至ります。</p>
-    <p>その最終試験に残った四種の生物……それこそが即ち、吸血鬼ヴァンピーア・獣人シメーレ・鳥人フォーゲラ・賢人エルフェ。人類はこの四種に皮肉を込めて『偽物ファルシュ』と名付け、本物になる為の試験を始めました。</p>
-    <p>この惑星は、新種の生物のポテンシャルを試す為の試験場なのです。</p>
-    <p>そして今は、人類の後継者となるべき『本物』を決める最終コンペティションの……お披露目会・・・・・の最中です』</p>
+    <p>《<span class="character">人类制造了许多人型生物，并将其送入这个星球反复进行了测试。</span></p>
+    <p><span class="character">时而赋予智慧，时而使之争执……然后以失败为粮食，不断改良的人型生物，继续进行实验。</span></p>
+    <p><span class="character">送过来的生物能更早地构筑文化吗。打起仗来，哪个生物能赢。多次尝试</span></p>
+    <p><span class="character">最初有数百种的新生物，在竞争的最后也灭绝了，不久实验就到了最终阶段。</span></p>
+    <p><span class="character">在最终考试中留下的四种生物……那就是吸血鬼、兽人、鸟人、精灵。人类对这四种生物充满讽刺意味的命名为“法鲁什”，开始了真正的试验。</span></p>
+    <p><span class="character">这个行星是为了测试新物种生物潜力的试验场。</span></p>
+    <p><span class="character">然后现在是决定人类后继者的“真面目”的最终竞赛……披露会……正在进行中</span>》</p>
+    <p><span class="comment translator">吸血鬼ヴァンピーア   德语Vampir   汉语：吸血鬼</span></p>
+    <p><span class="comment translator">獣人シメーレ   德语Schimäre  汉语：奇美拉/合成兽</span></p>
+    <p><span class="comment translator">鳥人フォーゲラ  德语Vogel 汉语：鸟。  词典里的日语是长【フォーゲル】这样的，不确定是不是作者打错了 </span></p>
+    <p><span class="comment translator">賢人エルフェ   德语Elfe 汉语：精灵</span></p>
+    <p><span class="comment translator">偽物ファルシュ   德语Falsch   汉语：假货</span></p>
     <p>“<span class="character">…………</span>”</p>
     <p></p>
     <p></p>
-    <p>　メルセデスは一度目を閉じ、小さく溜息を吐いた。</p>
-    <p>　どうやら自分達は、箱庭の中の実験動物だったらしい。</p>
-    <p>　腕のマスターキー……帝国ダンジョンの中でベアトリクスが何か、怒りの声をあげているのが分かる。</p>
-    <p>　どうやら今の話を聞いてしまい、人類に対し酷く怒っているようだ。</p>
-    <p>　だがそれも無理はない。お前達は実験動物だったと言われて平静でいろと言う方が無理な話だ。</p>
+    <p>梅赛德斯闭上眼睛，轻轻叹了口气。</p>
+    <p>看来我们是箱庭中的实验动物。</p>
+    <p>手臂的万能钥匙……我知道在帝国地牢里贝尔特里克斯在发出什么愤怒的声音。</p>
+    <p>听了刚才的话，好像对人类非常生气。</p>
+    <p>但是这也不是不可能的。说你们是实验动物还要你们保持冷静是不可能的。</p>
     <p></p>
     <p></p>
-    <p>『そして正式採用・・・・が決まった暁には、生まれて来る赤子に対して人類の記憶と意識の転写が始まります。</p>
-    <p>人類は衰え、醜くなった身体を捨てて、美しく強靭な身体へ『転生』して一から生と歴史をやり直す……それが彼等の目的です。</p>
-    <p>そして既に、実験的に記憶の転写は始まっております』</p>
-    <p>“<span class="character">…………それが、私のような存在という事か？</span>”</p>
-    <p>『はい。しかしまだ実験段階……もしかしたら失敗するリスクもあります。</p>
-    <p>故に彼等は自分達ではその実験を行わずに、保存状態のいい過去の人間……コールドスリープをしていた旧時代の人間の記憶の転写から始めました』</p>
+    <p>《<span class="character">然后正式录用····决定了的时候，人类的记忆和意识将开始转印到出生的婴儿身上。</span></p>
+    <p><span class="character">人类放弃了衰老、丑陋的身体，向美丽而坚韧的身体“转生”，从一开始重新做人和历史……这就是他们的目的。</span></p>
+    <p><span class="character">而且，记忆的转录已经开始实验了</span></p>
+    <p>“<span class="character">……那就是，像我这样的存在吗？</span>”</p>
+    <p>《<span class="character">是的。但是还处于实验阶段……也许会有失败的风险。</span></p>
+    <p><span class="character">所以他们自己不进行那个实验，而是从保存状态良好的过去的人……进行冷冻睡眠的旧时代的人的记忆的转录开始了</span></p>
     <p></p>
     <p></p>
-    <p>　メルセデスはこの説明に、思わず“ん？”と声をあげてしまった。</p>
-    <p>　今の説明に一か所、どうしても突っ込まずにはいられない部分があったのだ。</p>
-    <p>　ツヴェルフはメルセデスの様子に、気付いたように補足説明を入れる。</p>
+    <p>梅赛德斯听到这个说明，不禁发出了“嗯？”这样的声音。</p>
+    <p>在刚才的说明中，有一个无论如何也不能不深入的地方。</p>
+    <p>茨瓦尔夫对梅赛德斯的情况做了补充说明，让她注意到了。</p>
     <p></p>
     <p></p>
-    <p>『二十一世紀の段階で既にコールドスリープは、アメリカやロシアで実際に行われていました。</p>
-    <p>自分の死後に死体を保存するように生前依頼する事で冷凍保存されるサービスです』</p>
-    <p>“<span class="character">いや、そっちじゃない</span>”</p>
+    <p>《<span class="character">二十一世纪的时候已经在美国和俄罗斯实际进行过冷冻睡眠实验。</span></p>
+    <p><span class="character">这是生前委托冷冻保存自己死后的尸体的服务</span>》</p>
+    <p>“<span class="character">不，不是那边。</span>”</p>
     <p></p>
     <p></p>
-    <p>　２１世紀にコールドスリープが実際に行われていた事は、何かのニュースで見た覚えがある。</p>
-    <p>　勿論生きたまま冷凍するのは法律に接触するので、あくまで死体の保存に過ぎないし、当時は冷凍状態から蘇生したという話も聞いた事がない。</p>
-    <p>　だが仮に当時、ＳＦのようなコールドスリープが実現していたとしても、それでメルセデスの前世の死体が保存されているはずがない。</p>
-    <p>　前世の最期はよく覚えている。歩道橋から落ちての転落死だ。</p>
-    <p>　勿論コールドスリープのサービスなど依頼した覚えはないし、第一日本でそんなサービスはなかったはずだ……多分。</p>
-    <p>　死後の臓器提供には、どうせ死んだ後ならばどうでもいいとサインしていたような気がする。</p>
-    <p>　考えられるのは、あの後に死体が回収されてドナーとして保存された……とかか？</p>
-    <p>　どちらにせよ、相当闇の深い話が裏にありそうな気がする。</p>
+    <p>记得曾在某个新闻上看到过21世纪实际上实行的冷眠。</p>
+    <p>当然，直接冷冻是与法律相接触的，所以只不过是尸体的保存，也没有听说过当时是从冷冻状态中苏醒过来的。</p>
+    <p>但是即使当时实现了SF那样的冷眠，也不可能因此而保存梅赛德斯前世的尸体。</p>
+    <p>前世的末日还记得清清楚楚。从天桥上掉下来摔死了。</p>
+    <p>当然我也不记得委托过冷眠服务，第一日本应该没有这种服务……大概。</p>
+    <p>对于死后的脏器提供，我觉得好像是在死后签名说反正死后怎么样都无所谓。</p>
+    <p>能想到的是，在那之后尸体被回收作为捐赠者被保存了……之类的吗？</p>
+    <p>不管怎么说，都觉得背后有相当黑暗的故事。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">まあいい……その記憶の転写とはどのくらいの頻度で行われている？</span>”</p>
+    <p>“<span class="character">算了……那个记忆的转录是以怎样的频率进行的？</span>”</p>
     <p>《<span class="character">…………</span>》</p>
-    <p>“<span class="character">ツヴェルフ？</span>”</p>
-    <p>《<span class="character">申し訳ありません。現在の権限ではこの先を語る事は出来ないようです</span>》</p>
+    <p>“<span class="character">茨瓦尔夫？</span>”</p>
+    <p>《<span class="character">对不起。现在的权限好像无法说明今后的事情。</span>》</p>
     <p></p>
     <p></p>
-    <p>　どうやら今回の情報開示はここまでのようだ。</p>
-    <p>　だがこれで大分話が進んだ。</p>
-    <p>　特に大きいのは、自分という存在はファンタジーな転生などではなく、意図的に生み出されたものだったという事だろう。</p>
+    <p>看来这次的信息公开到此为止了。</p>
+    <p>但是，这样的话已经进行了很多。</p>
+    <p>特别重要的是，自己的存在并不是幻想的转生，而是有意识地产生出来的东西吧。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">では質問を変えよう。そのコンペティションの勝利条件とは何だ？</span>”</p>
-    <p>『四種族の中から、『ダンジョン№0』の攻略者が出る事です。</p>
-    <p>誰かがダンジョン№0を攻略した時点でコンペティションは終了となり、その攻略者の種族が正式採用され……残る三種族は廃棄されます』</p>
+    <p>“<span class="character">那就换个问题吧。那个竞赛的胜利条件是什么？</span>”</p>
+    <p>《<span class="character">是从四种种族中，『迷宫No.0』的攻略种族挑选。</span></p>
+    <p><span class="character">在谁攻占了地牢No.0的时候，比赛结束，那个攻略者的种族将被正式采用……剩下的三种族会被废弃</span>》</p>
     <p></p>
     <p></p>
-    <p>　ツヴェルフの説明を聞き、メルセデスの中で危機感が膨れ上がった。</p>
-    <p>　誰かがダンジョン№0とやらを攻略してしまえば、その時点でこの星の命運が決してしまう。</p>
-    <p>　その攻略者が吸血鬼以外ならばアウト。自分も……母も、妹達も廃棄されるだろう。</p>
-    <p>　廃棄というのがこの星に放置されるだけならばいいが、そんな甘い話ではあるまい。</p>
-    <p>　人類……神々の目的はこの星で、新たな身体を得て歴史をやり直す事なのだから正式採用された種族以外の偽物ファルシュはまず無事では済むまい。</p>
+    <p>听到了茨瓦尔夫的说明，在梅赛德斯中危机感增大了。</p>
+    <p>如果有人攻占了地牢No.0的话，在那个时候这个星球的命运就决定了。</p>
+    <p>如果那个攻略者是吸血鬼以外的话就出局了。自己……母亲和妹妹们都会被废弃吧。</p>
+    <p>如果将废弃的东西继续放置在这个星球上就好了，但这并不是那么甜蜜的事情。</p>
+    <p>人类……众神的目的是在这个星球上获得新的身体，重振历史，所以除了被正式采用的种族以外，其他的法鲁什是不会顺利的。</p>
     <p></p>
     <p></p>
-    <p>“<span class="character">ダンジョン№0か……それはどこにある？</span>”</p>
+    <p>“<span class="character">迷宫No.0吗……那个在哪里？</span>”</p>
     <p></p>
     <p></p>
-    <p>　誰かが攻略すれば即終了の爆弾。</p>
-    <p>　そんなものがあると知って、何もしないでいる程メルセデスは呑気ではない。</p>
-    <p>　今すぐ攻略しないにしても、まずは場所を抑えて誰も攻略出来ないようにしておく必要がある。</p>
-    <p>　何ならそこにモンスターをありったけ配備して誰も近付けないようにしてもいい。</p>
-    <p>　ダンジョン№0はそうするだけの価値がある……いや、そうしてでも守らなければならない危険物だ。</p>
+    <p>如果有人攻占的话，就立刻结束的炸弹。</p>
+    <p>知道有那样的东西，却什么都不做的梅赛德斯并不是那么容易的。</p>
+    <p>即使现在不马上攻略，也有必要先控制好场所，让谁都无法攻略。</p>
+    <p>如果是这样的话，可以把怪物全部配备在那里，不让任何人接近。</p>
+    <p>地牢No.0值得这么做……不，即使那样也必须要保护的危险物品。</p>
     <p></p>
     <p></p>
-    <p>《<span class="character">申し訳ありません。それは№0以外の全てのダンジョンを制覇した者のみが知る事が出来るトップシークレットとなっております</span>》</p>
-    <p>“<span class="character">そうか……そう簡単に見付かる場所ではないんだな？</span>”</p>
-    <p>『いえ、発見自体は誰でも可能です。</p>
-    <p>しかしこの世界にある№0以外のダンジョンをクリアしない限り、挑む事は決して出来ません』</p>
+    <p>《<span class="character">非常抱歉，这是只有称霸No.0以外所有地下城者才能知道的顶级秘密。</span>》</p>
+    <p>“<span class="character">是吗……不是那么容易就能找到的地方吗？</span>”</p>
+    <p>『<span class="character">不，谁都可以发现。</span></p>
+    <p><span class="character">但是，只要不清除这个世界上No.0以外的地牢，就绝对不能挑战</span>》</p>
     <p></p>
     <p></p>
-    <p>　発見自体は誰でも可能ときたか。</p>
-    <p>　そう思い、メルセデスはツヴェルフに視線を投げたが、彼女は相変わらずの無表情だ。</p>
-    <p>　どうやらこれが今出来る限りの最大限のヒントらしい。</p>
-    <p>　ともかく、誰かが偶発的にクリアしてしまう可能性はないようだ。</p>
-    <p>　自分がダンジョンを三つ抱えている限り、ある日いきなりコンペティションが終了して神々に廃棄されるという事はない。</p>
-    <p>　それが分かっただけでも朗報と思うべきだろう。</p>
+    <p>本身是谁都可能发现的吗。</p>
+    <p>这样想着，梅赛德斯将视线投向了茨瓦尔夫，但她还是毫无表情。</p>
+    <p>看来这是现在能做到的最大限度的提示。</p>
+    <p>总之，似乎没有谁偶然通关的可能性。</p>
+    <p>只要自己有三个地牢，就不会有一天比赛结束被众神抛弃。</p>
+    <p>即使只是知道了那个也应该认为是好消息吧。</p>
     <p>　　炎</p>
-    <p>（　´∀`）人　皆様こんばんは。</p>
-    <p>既に活動報告で語っているのですが、この度『欠けた月のメルセデス』の書籍化が決定しました。</p>
-    <p>これも皆様のおかげであります。</p>
-    <p>それと3月12日に“野生のラスボスが現れた！”コミカライズ8巻が発売します。</p>
-    <p>こちらもよろしくお願いします。</p>
+    <p>（　´∀`）人　各位晚上好。</p>
+    <p>虽然已经在活动报告中说过了，但是这次《残月的梅赛德斯》将决定文库化。</p>
+    <p>这也多亏了大家。</p>
+    <p>3月12日《野生的最终BOSS出现了！》漫画第8卷发售。</p>
+    <p>这边也请多关照。</p>
 </body>
 
 </html>
